--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws4": "^1.12.0",
+    "axios": "^1.6.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
+    "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
