--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws4": "^1.12.0",
     "axios": "^1.6.2",
+    "flowbite": "^2.3.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
