--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws4": "^1.12.0",
     "axios": "^1.6.2",
     "flowbite": "^2.3.0",
+    "ionicons": "^7.4.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
